--- a/ToDo list/index.html
+++ b/ToDo list/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <!--start adding-container-->
     <div class="adding-container">
       <div class="container-bar">
         <input class="input-add" />
         <div class="add-button">+</div>
       </div>
     </div>
+    <!--end adding-container-->
+    
+    <!--start todo-container -->
     <div class="todo-container">
       <div class="todo-content">No taskes to show</div>
     </div>
@@ -21,6 +25,9 @@
       <div>Taskes<span class="tasks-num">0</span></div>
       <div>Completed<span class="completed">0</span></div>
     </div>
+    <!--end todo-container -->
+    
+    <!--calling jQuery library and our main js file -->
     <script src="jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
   </body>
